--- a/css/styles.css
+++ b/css/styles.css
@@ -626,7 +626,7 @@ footer .second-part-logo {
   transform: translate(-50%, -50%) scale(1);
   min-width: 528px;
   min-height: 581px;
-  padding: 8px;
+  /* padding: 8px; */
 
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -652,4 +652,96 @@ footer .second-part-logo {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+                    /* ----FORM------ */
+
+.form-title{
+  margin-top: 40px;
+  margin-bottom: 12px;
+  color: var(--title-text-color);
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+.form{
+
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+.form-field{
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  margin-bottom: 10px;
+}
+
+.form-check{
+  display: flex;
+  align-items: center;
+  margin-bottom: 30px;
+}
+.checkbox-label{
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: var(--primary-text-color);
+    margin-left: 8.38px;
+}
+.checkbox-label a{
+  color: var(--accent-color);
+}
+.form-input{
+  display: inline-block;
+  width: 448px;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+.form-comment{
+  display: inline-block;
+  width: 448px;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  margin-bottom: 10px;
+
+}
+
+.input-icon{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+
+}
+
+
+.sub-btn{
+  width: 200px;
+  height: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 4px;
+
+font-style: inherit;
+
+font-weight: 700;
+font-size: 16px;
+line-height: 1.88;
+text-align: center;
+letter-spacing: 0.06em;
+border-color: var(--accent-color) ;
+box-shadow: none;
+border-style: none;
+color: var(--hover-text);
+
+  background-color: var(--accent-color);
+
 }
