--- a/css/styles.css
+++ b/css/styles.css
@@ -647,8 +647,9 @@ footer .second-part-logo {
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
 .close-btn:hover .close-icon,
-.close-btn:focus .close-icon{
+.close-btn:focus .close-icon {
   fill: var(--accent-color);
+  cursor: pointer;
 }
 
 .close-icon {
@@ -658,9 +659,9 @@ footer .second-part-logo {
   transform: translate(-50%, -50%);
 }
 
-                    /* ----FORM------ */
+/* ----FORM------ */
 
-.form-title{
+.form-title {
   margin-top: 40px;
   margin-bottom: 12px;
   color: var(--title-text-color);
@@ -670,8 +671,7 @@ footer .second-part-logo {
   text-align: center;
   letter-spacing: 0.03em;
 }
-.form{
-
+.form {
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -680,53 +680,67 @@ footer .second-part-logo {
   padding-right: 40px;
 }
 
-.form-field{
+.form-field {
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
   position: relative;
   margin-bottom: 10px;
 }
 
-.form-field:focus .form-input{
+.form-input:focus {
   border: 1px solid var(--accent-color);
-  box-sizing: border-box;
-  border-radius: 4px;
-  
 }
 
+.form-input:focus ~ .form-label {
+  fill: var(--accent-color);
+}
 .form-label,
-.comment-label{
+.comment-label {
   margin-bottom: 4px;
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.01em;
 }
 
-.form-input{
+.form-input {
   display: inline-block;
   padding-left: 42px;
   width: 448px;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  outline: none;
 }
-.form-comment{
+
+.input-icon {
+  position: absolute;
+  bottom: 11px;
+  left: 12px;
+}
+.comment-field {
+  display: flex;
+  flex-direction: column;
+}
+.form-comment {
   display: inline-block;
+  resize: none;
+  padding: 12px 16px;
   width: 448px;
   height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   margin-bottom: 10px;
-
+  outline: none;
 }
-
-.input-icon{
-  position: absolute;
-  bottom: 11px;
-  left: 12px;
-
+.form-comment:focus {
+  border-color: var(--accent-color);
 }
-
+.form-comment::placeholder {
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
 .form-check {
   display: flex;
   align-items: center;
@@ -745,26 +759,24 @@ footer .second-part-logo {
   color: var(--accent-color);
 }
 
-
-.sub-btn{
+.sub-btn {
   width: 200px;
   height: 50px;
   margin-left: auto;
   margin-right: auto;
   border-radius: 4px;
 
-font-style: inherit;
+  font-style: inherit;
 
-font-weight: 700;
-font-size: 16px;
-line-height: 1.88;
-text-align: center;
-letter-spacing: 0.06em;
-border-color: var(--accent-color) ;
-box-shadow: none;
-border-style: none;
-color: var(--hover-text);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  text-align: center;
+  letter-spacing: 0.06em;
+  border-color: var(--accent-color);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+  color: var(--hover-text);
 
   background-color: var(--accent-color);
-
 }
