--- a/css/styles.css
+++ b/css/styles.css
@@ -676,8 +676,8 @@ footer .second-part-logo {
   flex-direction: column;
   width: 100%;
   height: 100%;
-  padding-left: 40px;
-  padding-right: 40px;
+  padding-left: 41px;
+  padding-right: 39px;
 }
 
 .form-field {
@@ -742,22 +742,51 @@ footer .second-part-logo {
   color: rgba(117, 117, 117, 0.5);
 }
 .form-check {
-  display: flex;
-  align-items: center;
-  margin-bottom: 30px;
-}
+    margin-bottom: 30px;
+    }
 
 .checkbox-label {
+  display: flex;
+  align-items:center;
+  margin-left: 13px;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
-  margin-left: 8.38px;
+  
 }
 
 .checkbox-label a {
   color: var(--accent-color);
 }
+
+.check-input{
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  position: absolute;
+  
+}
+
+.check-input:checked + .check-icon{
+  width: 16px;
+  height: 15px;
+  margin-right: 7px;
+  background-image: url('../images/svg/check-actv.svg');
+}
+ 
+
+
+.check-icon{
+  width: 16px;
+  height: 15px;
+  margin-right: 7px;
+  background-image: url('../images/svg/check-pass.svg');
+  transform: translateY(-1px);
+}
+
+
+
 
 .sub-btn {
   width: 200px;
