--- a/css/styles.css
+++ b/css/styles.css
@@ -469,6 +469,64 @@ footer .second-part-logo {
   display: inline-flex;
 }
 
+.input-block{
+  margin-left: 93px;
+}
+
+.footer-btn {
+  width: 200px;
+  height: 50px;
+  margin-left: 12px;
+  padding-left: 27px;
+   border-radius: 4px;
+  font-style: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  text-align: left;
+  letter-spacing: 0.06em;
+  border-color: var(--accent-color);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+  color: var(--hover-text);
+
+  background-color: var(--accent-color);
+}
+
+.btn-icon {
+  position: absolute;
+  margin-left: 10px;
+  width: 24px;
+  height: 24px;
+  background-image: url('../images/svg/icon-send.svg');
+}
+
+.call-text{
+  display: inline-block;
+  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--primary-background);
+}
+
+.footer-input{
+  width: 358px;
+  height: 50px;
+  padding: 15px 16px;
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-sizing: border-box;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  outline: none;
+  color: var(--primary-background);
+}
+
+
+
 /* для портфолио */
 .portfolio-filter {
   display: flex;
@@ -809,3 +867,4 @@ footer .second-part-logo {
 
   background-color: var(--accent-color);
 }
+
